# ITLab_rep

./: .gitmodules  CMakeLists.txt  main.cpp
HW_1/calc/: CMakeLists.txt
HW_1/calc/modules/: CMakeLists.txt
HW_1/calc/modules/include/: calc.hpp
HW_1/calc/modules/src/: calc.cpp
HW_1/calc/samples/: CMakeLists.txt  main.cpp
